--- a/Copernicus.ipynb
+++ b/Copernicus.ipynb
@@ -53,7 +53,7 @@
    "id": "a8e595f7",
    "metadata": {},
    "source": [
-    "We set the data directory"
+    "All geological data is in the data folder of the GitHub repository https://github.com/bullejos/A-3D-model-of-a-geological-structure-in-SE-Spain. Download them to be able to use them locally. Then set the data directory"
    ]
   },
   {
@@ -71,7 +71,7 @@
    "id": "2fc44bc6",
    "metadata": {},
    "source": [
-    "Now we read the csv file with the longitude and latitude data"
+    "Let us process the data in Calvillo thrust as an example. First we read the csv file with the longitude and latitude data. "
    ]
   },
   {
@@ -206,7 +206,7 @@
    "id": "9d8e8b92",
    "metadata": {},
    "source": [
-    "Using the utm module calculate the UTM coordinates from the latitude and longitude"
+    "Using the utm module calculate UTM coordinates from latitude and longitude"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "id": "eb84f4fb",
    "metadata": {},
    "source": [
-    "We set copernicus raster path"
+    "We download the DEM data from https://land.copernicus.eu/imagery-in-situ/eu-dem/eu-dem-v1-0-and-derived-products/eu-dem-v1.0 and save the `eu_dem_v11_E30N10.TIF` file in the `data` folder. Then we set copernicus raster path"
    ]
   },
   {
@@ -572,7 +572,7 @@
    "id": "a278a56b",
    "metadata": {},
    "source": [
-    "Finally we save the utm coordinates together with the elevation in a csv file"
+    "Finally we save the data frame with the utm coordinates together with the elevation in a csv file"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "id": "987b2771",
    "metadata": {},
    "source": [
-    "The first step is to establish a grid that covers the study area."
+    "To get the topography of the study area, the first step is to establish a grid that covers the zone."
    ]
   },
   {
@@ -996,7 +996,7 @@
    "id": "283d0714",
    "metadata": {},
    "source": [
-    "Save the UTM and elevations coordinates to a csv file "
+    "Save the data frame with UTM and elevations coordinates to a csv file "
    ]
   },
   {
@@ -1008,14 +1008,6 @@
    "source": [
     "topography.to_csv(DATADIR+'Topography.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20e429ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
