--- a/2D geological cross-sections.ipynb
+++ b/2D geological cross-sections.ipynb
@@ -53,7 +53,7 @@
    "id": "fa9fed4f",
    "metadata": {},
    "source": [
-    "We set the data and figures directories"
+    "We create the folder `figures` where all created figures will be load. Then set the data and figures directories"
    ]
   },
   {
