--- a/3D Bolck.ipynb
+++ b/3D Bolck.ipynb
@@ -15,37 +15,7 @@
    "source": [
     "We are going to build a block that will reach 300 meters deep and cover the study area.\n",
     "\n",
-    "We have grouped all modules and custom functions in the module3D.py file. Import this file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f6f3d28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import module3D\n",
-    "from module3D import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51859957",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATADIR='data/' # Directory with the data\n",
-    "FIGURESDIR='figures/' # Figures produced"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7e536a3",
-   "metadata": {},
-   "source": [
-    "Read the geological data"
+    "We have grouped all modules, custom functions and the geology data obtained in the previous notebook in the file `geology_data`. Import this file and all its data"
    ]
   },
   {
