--- a/3D Bolck.ipynb
+++ b/3D Bolck.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "We are going to build a block that will reach 300 meters deep and cover the study area.\n",
     "\n",
-    "We have grouped all modules, custom functions and the geology data obtained in the previous notebook in the file `geology_data`. Import this file and all its data"
+    "We have grouped all modules, custom functions and the geology data obtained in the previous notebooks in the file `geology_data`. Download this file from https://github.com/bullejos/A-3D-model-of-a-geological-structure-in-SE-Spain/tree/main and import it."
    ]
   },
   {
