--- a/3Dmodel_color.ipynb
+++ b/3Dmodel_color.ipynb
@@ -164,7 +164,7 @@
     "# topografía\n",
     "\n",
     "fig.add_trace(go.Surface(  x=topo_linear[3],y=topo_linear[4],z=topo_linear[5],\n",
-    "                           colorscale='YlGn',\n",
+    "                           colorscale='brwnyl',\n",
     "                           opacity = 0.8,\n",
     "                           name='Topography',\n",
     "                           legendgroup='topo',\n",
@@ -363,7 +363,7 @@
     "# topography\n",
     "\n",
     "fig.add_trace(go.Surface(  x=topo_linear[3],y=topo_linear[4],z=topo_linear[5],\n",
-    "                           colorscale='YlGn',\n",
+    "                           colorscale='brwnyl',\n",
     "                           opacity = 0.8,\n",
     "                           name='Topography',\n",
     "                           legendgroup='topo',\n",
@@ -539,7 +539,7 @@
     "# topography\n",
     "\n",
     "fig.add_trace(go.Surface(  x=topo_linear[3],y=topo_linear[4],z=topo_linear[5],\n",
-    "                           colorscale='YlGn',\n",
+    "                           colorscale='brwnyl',\n",
     "                           opacity = 0.8,\n",
     "                           name='Topography',\n",
     "                           legendgroup='topo',\n",
@@ -581,7 +581,8 @@
     "              center=dict(x=0, y=0, z=0),\n",
     "               eye=dict(x=0, y=-1, z=2) )\n",
     "\n",
-    "fig.update_layout( title=\"Topography Model\",\n",
+    "\n",
+    "fig.update_layout( title=\"3D Palomeque sheets geological map\",\n",
     "                  #paper_bgcolor = 'black',\n",
     "                 scene = dict(\n",
     "                     xaxis=dict(title='UTM_X', \n",
@@ -605,17 +606,19 @@
     "                                title='Elevation', \n",
     "                                title_font_size=10,\n",
     "                                titlefont_color='black', \n",
-    "                                range=[500,1000],\n",
+    "                                range=[100,1500],\n",
     "                                backgroundcolor='white',\n",
     "                                color='black', \n",
     "                                gridcolor='gray'),\n",
-    "                     aspectratio=dict(x=2, y=1.8, z=0.3)),\n",
+    "                     aspectratio=dict(x=2, y=1.8, z=1)),\n",
     "                     #aspectmode='data'),\n",
     "                     scene_camera= camera\n",
     "                 ) \n",
     "              \n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "go_offline.plot(fig,filename=FIGURESDIR+'Topomodel.html',validate=True, auto_open=False)\n"
    ]
   },
   {
@@ -907,7 +910,8 @@
     "                 ) \n",
     "              \n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "go_offline.plot(fig,filename=FIGURESDIR+'geomap.html',validate=True, auto_open=False)\n"
    ]
   },
   {
@@ -3106,10 +3110,288 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e4aff7d",
+   "metadata": {},
+   "source": [
+    "We create the 3D model with real topography"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d9c3f1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig=go.Figure(contacts+cabs+faults+tcont+sa_datt+sb_datt+sc_datt+sd_datt+se_datt)\n",
+    "\n",
+    "# topography\n",
+    "\n",
+    "fig.add_trace(go.Surface(  x=topo_linear[3],y=topo_linear[4],z=topo_linear[5],\n",
+    "                           colorscale='brwnyl',\n",
+    "                           opacity = 1,\n",
+    "                           name='Topography',\n",
+    "                           legendgroup='topo',\n",
+    "                           showlegend=True,\n",
+    "                           showscale=False))\n",
+    "fig.add_trace(go.Surface(  x=topo_linear[3],y=topo_linear[4],z=topo_linear[5],\n",
+    "                           colorscale='gray',\n",
+    "                           opacity = 0.3,\n",
+    "                           name='Topo',\n",
+    "                           legendgroup='topo',\n",
+    "                           showlegend=False,\n",
+    "                           showscale=False))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#bordes\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=xl1,\n",
+    "                        y=yl1,\n",
+    "                        z=elvl1,\n",
+    "                       mode ='lines',\n",
+    "                       name='Border',\n",
+    "                      legendgroup='border',\n",
+    "                      showlegend=True,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=3)\n",
+    "                       ))\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=xl2,\n",
+    "                        y=yl2,\n",
+    "                        z=elvl2,\n",
+    "                       mode ='lines',\n",
+    "                       name='sur',\n",
+    "                      legendgroup='border',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=3)\n",
+    "                       ))\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=xl3,\n",
+    "                        y=yl3,\n",
+    "                        z=elvl3,\n",
+    "                       mode ='lines',\n",
+    "                       name='norte',\n",
+    "                      legendgroup='border',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=3)\n",
+    "                       ))\n",
+    "fig.add_trace(go.Scatter3d(x=xl4,\n",
+    "                        y=yl4,\n",
+    "                        z=elvl4,\n",
+    "                       mode ='lines',\n",
+    "                       name='este',\n",
+    "                      legendgroup='border',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=3)\n",
+    "                       ))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# texts\n",
+    "\n",
+    "trace = go.Scatter3d(\n",
+    "                   x=namesx, y=namesy, z=namesz,\n",
+    "                   text=namestxt,\n",
+    "                   name='Heights',\n",
+    "                   mode=\"text\",\n",
+    "                   textfont=dict(color=[\"black\",\"black\"],size=13),\n",
+    "                   hoverinfo=\"skip\")\n",
+    "\n",
+    "fig.add_trace(trace)\n",
+    "\n",
+    "trace2 = go.Scatter3d(\n",
+    "                   x=nnx, y=nny, z=nnz,\n",
+    "                   text=nntxt,\n",
+    "                   name='Stratigraphic levels',\n",
+    "                   mode=\"text\",\n",
+    "                   legendgroup='cabalgamientos',\n",
+    "                   showlegend=False,\n",
+    "                   textfont=dict(color='black',size=18),\n",
+    "                   hoverinfo=\"skip\")\n",
+    "\n",
+    "fig.add_trace(trace2)\n",
+    " \n",
+    "# geological symbos for faults\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=f1[0],\n",
+    "                        y=f1[1],\n",
+    "                        z=f1[2],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='faults',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "fig.add_trace(go.Scatter3d(x=f2[0],\n",
+    "                        y=f2[1],\n",
+    "                        z=f2[2],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='faults',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "# geological symbos for thrusts\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=[pal_B[0][55],pal_B[0][50],pal_B[0][65]],\n",
+    "                        y=[pal_B[1][55],pal_B[1][50],pal_B[1][65]],\n",
+    "                        z=[pal_B[2][55]+50,pal_B[2][50]+30,pal_B[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='B',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "fig.add_trace(go.Scatter3d(x=[cal_B[0][55],cal_B[0][50],cal_B[0][65]],\n",
+    "                        y=[cal_B[1][55],cal_B[1][50],cal_B[1][65]],\n",
+    "                        z=[cal_B[2][55]+50,cal_B[2][50]+30,cal_B[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='B',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=[pal_C[0][55],pal_C[0][50],pal_C[0][65]],\n",
+    "                        y=[pal_C[1][55],pal_C[1][50],pal_C[1][65]],\n",
+    "                        z=[pal_C[2][55]+50,pal_C[2][50]+30,pal_C[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='C',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=[cal_C[0][55],cal_C[0][50],cal_C[0][65]],\n",
+    "                        y=[cal_C[1][55],cal_C[1][50],cal_C[1][65]],\n",
+    "                        z=[cal_C[2][55]+50,cal_C[2][50]+30,cal_C[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='C',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=[pal_D[0][55],pal_D[0][50],pal_D[0][65]],\n",
+    "                        y=[pal_D[1][55],pal_D[1][50],pal_D[1][65]],\n",
+    "                        z=[pal_D[2][55]+50,pal_D[2][50]+30,pal_D[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='D',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=[pal_E[0][55],pal_E[0][50],pal_E[0][65]],\n",
+    "                        y=[pal_E[1][55],pal_E[1][50],pal_E[1][65]],\n",
+    "                        z=[pal_E[2][55]+50,pal_E[2][50]+30,pal_E[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='E',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "fig.add_trace(go.Scatter3d(x=[pal_ds_B[0][55],pal_ds_B[0][50],pal_ds_B[0][65]],\n",
+    "                        y=[pal_ds_B[1][55],pal_ds_B[1][50],pal_ds_B[1][65]],\n",
+    "                        z=[pal_ds_B[2][55]+50,pal_ds_B[2][50]+30,pal_ds_B[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='B',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "fig.add_trace(go.Scatter3d(x=[calds_A[0][55],calds_A[0][50],calds_A[0][65]],\n",
+    "                        y=[calds_A[1][55],calds_A[1][50],calds_A[1][65]],\n",
+    "                        z=[calds_A[2][55]+50,calds_A[2][50]+30,calds_A[2][65]+30],\n",
+    "                       mode ='lines',\n",
+    "                       name='Sections',\n",
+    "                      legendgroup='A',\n",
+    "                      showlegend=False,\n",
+    "                      line=dict(color='black',\n",
+    "                      width=5)\n",
+    "                       ))\n",
+    "\n",
+    "\n",
+    "\n",
+    "# figure layout\n",
+    "\n",
+    "camera = dict(up=dict(x=0, y=0, z=1),\n",
+    "              center=dict(x=0, y=0, z=0),\n",
+    "               eye=dict(x=0, y=-1, z=2) )\n",
+    "\n",
+    "fig.update_layout( title=\"3D Palomeque sheets geological map with cross-sections\",\n",
+    "                  #paper_bgcolor = 'black',\n",
+    "                 scene = dict(\n",
+    "                     xaxis=dict(title='UTM_X', \n",
+    "                                tickfont = dict(size = 10,color = 'black'),\n",
+    "                                title_font_size=10,\n",
+    "                                titlefont_color='black', \n",
+    "                                range=[cotasxy[0],cotasxy[1]],\n",
+    "                                backgroundcolor='white',\n",
+    "                                color='black',\n",
+    "                                gridcolor='gray'),\n",
+    "                     yaxis=dict(title='UTM_Y',\n",
+    "                                tickfont = dict(size = 10,color = 'black'),\n",
+    "                                title_font_size=10,\n",
+    "                                titlefont_color='black', \n",
+    "                                range=[cotasxy[2],cotasxy[3]],  \n",
+    "                                backgroundcolor='white',\n",
+    "                                color='black',\n",
+    "                                gridcolor='gray'),\n",
+    "                      zaxis=dict(nticks=4,\n",
+    "                                tickfont = dict(size = 10,color = 'black'),\n",
+    "                                title='Elevation', \n",
+    "                                title_font_size=10,\n",
+    "                                titlefont_color='black', \n",
+    "                                range=[100,1500],\n",
+    "                                backgroundcolor='white',\n",
+    "                                color='black', \n",
+    "                                gridcolor='gray'),\n",
+    "                     aspectratio=dict(x=2, y=1.8, z=1)),\n",
+    "                     #aspectmode='data'),\n",
+    "                     scene_camera= camera\n",
+    "                 ) \n",
+    "              \n",
+    "\n",
+    "fig.show()\n",
+    "go_offline.plot(fig,filename=FIGURESDIR+'3d.html',validate=True, auto_open=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7d513f5",
+   "metadata": {},
+   "source": [
+    "Now we change the colors of the surface"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5815b2e5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fig=go.Figure(contacts+cabs+faults+tcont+sa_datt+sb_datt+sc_datt+sd_datt+se_datt+p_dat)\n",
@@ -3342,14 +3624,6 @@
     "fig.show()\n",
     "go_offline.plot(fig,filename=FIGURESDIR+'3dandxscolors.html',validate=True, auto_open=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6d9c3f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
