--- a/Copernicus.ipynb
+++ b/Copernicus.ipynb
@@ -5,7 +5,7 @@
    "id": "62667a62",
    "metadata": {},
    "source": [
-    "# The use of Copernicus for calculating elevations"
+    "# The use of Copernico module for calculating elevations"
    ]
   },
   {
