--- a/Copernicus.ipynb
+++ b/Copernicus.ipynb
@@ -13,7 +13,7 @@
    "id": "86af5abb",
    "metadata": {},
    "source": [
-    "In this notebook we will explain how to use the copernicus and utm packages to calculate elevations.\n",
+    "In this notebook we will explain how to use the copernico and utm packages to calculate elevations.\n",
     "\n",
     "The copernico module is in the main directory and instalation is not require.\n",
     "\n",
