Update 2D geological cross-sections.ipynb

--- a/2D geological cross-sections.ipynb
+++ b/2D geological cross-sections.ipynb
@@ -378,7 +378,7 @@
    "id": "2ed88631",
    "metadata": {},
    "source": [
-    "## The sketch map"
+    "## The geological map"
    ]
   },
   {
@@ -495,7 +495,7 @@
     "\n",
     "\n",
     "ax.grid()\n",
-    "plt.title('Geologic Sketch Map')\n",
+    "plt.title('Geologic Map')\n",
     "plt.savefig(FIGURESDIR+'sketch_map.png',facecolor='white')\n"
    ]
   },
@@ -694,7 +694,7 @@
     "\n",
     "\n",
     "ax.grid()\n",
-    "plt.title('Geologic Sketch Map with colors')\n",
+    "plt.title('Geological Map with colors')\n",
     "plt.savefig(FIGURESDIR+'color_sketch_map.png',facecolor='white')\n"
    ]
   },
